tdf#158583 tdf#158586 RTF writerfilter: only startRun for real frame

This fixes a LO 7.6.4 regression of a lost page break,
as well as another example where part of the paragraph moves to next page,
from mstahl's commit 4e2f2489c4c7436f8b3a21a530bc625cbef4e365

It seems likely that the run should only be checked
when we know that there is a real frame here,
which essentially becomes a run for most purposes
(except perhaps for page breaks - as seen for DOCX).

This code block was introduced with
commit 0d9132c5046e15540abc20e45d64080708626441
Author: Miklos Vajna on Sat Mar 24 13:04:54 2012 +0100
    fdo#47036 fix RTF import of shapes inside text frames
    at the start of the doc
and in the other block of touched code, it did test inFrame.

The unit test works when compiling right after the regression,
but has broken because of tdf#153194.

Since this will get backported way back and all over,
it is a good time to introduce rtfexport8.

make CppunitTest_sw_rtfexport8 CPPUNIT_TEST_NAME=testTdf158586_0
make CppunitTest_sw_rtfexport8 CPPUNIT_TEST_NAME=testTdf158586_1

Change-Id: Ib4b75efb8422d96e693da337cbef97520e975f3f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160655
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 0984b022aab805571f40bdefad6e418cdfe69a81)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160939
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>