sw/Module_sw.mk
@@ -67,6 +67,7 @@ $(eval $(call gb_Module_add_slowcheck_targets,sw,\
     CppunitTest_sw_rtfexport5 \
     CppunitTest_sw_rtfexport6 \
     CppunitTest_sw_rtfexport7 \
+    CppunitTest_sw_rtfexport8 \
     CppunitTest_sw_docbookexport \
     CppunitTest_sw_fodfexport \
     CppunitTest_sw_htmlexport \
